<!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Inventory App</string>
    <string name="db_count">There is actually %1$d books to sell.</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all">Delete all books</string>
    <string name="new_book_inserted">New book inserted!</string>
    <string name="problem_creating_book">Problem when creating the book!</string>
    <string name="dollar_sell_action">Dollar sell action</string>
    <string name="empty_store">Empty store</string>
    <string name="price_label">price:</string>
    <string name="sellUnavailable">This book can\'t be sold, not enough quantity</string>
    <string name="quantity_label">Quantity:</string>
    <string name="book_infos_label">Book details:</string>
    <string name="book_name">Name</string>
    <string name="book_price">Price</string>
    <string name="book_quantity">Quantity</string>
    <string name="supplier_infos_label">Supplier details:</string>
    <string name="supplier_phone">Phone number</string>
    <string name="editor_activity_title_modify_book">Edit a book</string>
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editErrot">Error while modifying book</string>
    <string name="insertError">Error while saving book</string>
    <string name="insertBook">Book saved</string>
    <string name="editBook">Book modified</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleteBook">Book deleted</string>
    <string name="deleteError">Error while deleting book</string>
    <string name="phone_invalid">The phone number is invalid</string>
    <string name="book_name_empty">Book name should be filled!</string>
    <string name="price_empty">Book price should be greater than 0</string>
    <string name="quantity_empty">Book quantity should be positive</string>
    <string name="supplier_name_empty">Supplier name should be filled!</string>
</resources>
