<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    tools:context=".ui.EditorActivity">

    <LinearLayout
        android:id="@+id/book_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/book_name_label"
            style="@style/CategoryStyle"
            android:text="@string/book_infos_label" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/book_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/book_price"
                android:inputType="number" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/book_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/book_quantity"
                    android:inputType="number" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/quantity_add_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_box"
                    app:layout_constraintRight_toLeftOf="@id/quantity_minus_ic" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/quantity_minus_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_indeterminate_check_box"
                    app:layout_constraintRight_toRightOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/supplier_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/book_infos">

        <TextView
            android:id="@+id/supplier_name_label"
            style="@style/CategoryStyle"
            android:text="@string/supplier_infos_label" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/book_name"
                android:inputType="textCapWords" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/supplier_phone"
                    android:inputType="phone" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/supplier_phone_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone"
                    app:layout_constraintRight_toRightOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>