<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/book_item_padding"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/book_item_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Book name" />

    <TextView
        android:id="@+id/book_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/book_item_padding"
        android:text="@string/price_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_name" />

    <TextView
        android:id="@+id/book_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/book_item_padding"
        app:layout_constraintLeft_toRightOf="@id/book_price_label"
        app:layout_constraintTop_toBottomOf="@id/book_name"
        tools:text="Book price" />

    <TextView
        android:id="@+id/book_quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/book_item_padding"
        android:text="@string/quantity_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/book_quantity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/book_item_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sell_book_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Book quantity" />

    <ImageView
        android:id="@+id/sell_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/book_sell_item_padding"
        android:contentDescription="@string/dollar_sell_action"
        android:src="@drawable/ic_attach_money_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>